# Tuxilo

./: .gitignore  C22-4CondicionesClim-Fig1-ComporONI.xlsx  Graficos.py  correlation_analysis.py  correlation_matrix_viz.py  download-2.csv  download-3.csv  download-4.csv  fenomeno_presence.py  foo.py  foo_nb.py  hidroelectrica.py  hidroelectricas  pattern_analysis.py  results
App/Core/: .dockerignore  Dockerfile  README.md  compose.yaml  entrypoint_core.sh  pyproject.toml
App/Core/src/: main.py  pyproject.toml
App/Core/src/db/: actor_segments.py  actors.py  forms.py  results.py  users.py
App/Core/src/handlers/: actor_segments.py  actors.py  forms.py  resultados_2025.xlsx  results.py
App/Core/src/relationships/actors/: actor_segments.py  actors.py
App/Core/src/relationships/forms/: card_templates.py  field_choices.py  field_groups.py  fields.py  forms.py  informations.py  questions.py  section_types.py  sections.py
App/Core/src/relationships/links/: link_multichoices_choices.py  link_user_actor.py  link_user_submission.py
App/Core/src/relationships/reference/: field_types.py  relational_operators.py  submission_status_types.py  validation_types.py
App/Core/src/relationships/rules/: field_dependencies.py  field_rules.py  section_dependencies.py
App/Core/src/relationships/submissions/: answers.py  answers_boolean.py  answers_card_entry.py  answers_date.py  answers_file.py  answers_multi_choice.py  (+4 more)
App/Core/src/routers/: actor_segments.py  actors.py  files.py  forms.py  results.py
App/Core/src/schemas/: actor_segments.py  actors.py  forms.py  results.py
(+54 files in other folders)
